--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-  <iframe id="preview-frame" src="https://rtc.rtcs.live/?scene&room=AwareON" name="preview-frame" frameborder="0" noresize="noresize" allow="camera; microphone">
+  <iframe id="preview-frame" src="https://rtc.rtcs.live/?scene&room=AwareON" name="preview-frame" frameborder="0" noresize="noresize" allow="autoplay;camera;microphone;fullscreen;picture-in-picture;display-capture;midi;geolocation;">
   </iframe>
 </body>
 
