--- a/live.html
+++ b/live.html
@@ -40,9 +40,7 @@
 </head>
 
 <body oncontextmenu="return false;">
-  <iframe id="preview-frame" src="https://youtu.be/E8_MsWyyHbI?si=_zrdP70AzqYyHMVi?autoplay=1&loop=1" name="preview-frame" frameborder="0" noresize="noresize">
-  </iframe>
-  
+  <iframe id="preview-frame" width="560" height="315"     src="https://www.youtube.com/embed/E8_MsWyyHbI?si=OjXt98FiWBkP7Md1?rel=0&amp;&amp;showinfo=0;&controls=0;&autoplay=1;&loop=1;"> </iframe> 
 </body>
 
 </html>
