--- a/live.html
+++ b/live.html
@@ -40,7 +40,7 @@
 </head>
 
 <body oncontextmenu="return false;">
-  <iframe id="preview-frame" width="560" height="315"     src="https://www.youtube.com/embed/E8_MsWyyHbI?si=OjXt98FiWBkP7Md1?rel=0&amp;&amp;showinfo=0;&controls=0;&autoplay=1;&loop=1;"> </iframe> 
+  <iframe id="preview-frame" width="560" height="315"     src="https://www.youtube.com/embed/E8_MsWyyHbI?si=OjXt98FiWBkP7Md1?autoplay=1&loop=1"> </iframe> 
 </body>
 
 </html>
