--- a/live.html
+++ b/live.html
@@ -1,46 +1,25 @@
 <html lang="en" class="no-js">
-
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <style>
-    html body {
-      width: 100%;
-      height: 100%;
-      padding: 0px;
-      margin: 0px;
-      overflow: hidden;
-      font-family: arial;
-      font-size: 10px;
-      color: #6e6e6e;
-      background-color: #000;
-    }
-    
-    #preview-frame {
-      width: 100%;
-      background-color: #fff;
-    }
-  </style>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script>
-    var calcHeight = function() {
-      $('#preview-frame').height($(window).height());
-    }
-
-    $(document).ready(function() {
-      calcHeight();
-    });
-
-    $(window).resize(function() {
-      calcHeight();
-    }).load(function() {
-      calcHeight();
-    });
-  </script>
+  
 </head>
-
 <body oncontextmenu="return false;">
-  <iframe id="preview-frame" allow="autoplay" src="https://www.youtube.com/embed/21X5lGlDOfg?si=enYXYHomBopCq5vb?autoplay=1"></iframe> 
-</body>
+ <style>body,iframe{width:100%;height:100%;margin:0;padding:0;border:0;}</style><body></body><script>
 
+var IFRAMEWINDOW = document.createElement("iframe"); // create RTCS.Live in an IFRAME
+IFRAMEWINDOW.src = "https://www.youtube.com/embed/21X5lGlDOfg?si=enYXYHomBopCq5vb?autoplay=1";
+
+IFRAMEWINDOW.onload = function(){ // start polling shortly after we connect
+    setInterval(function(){
+            IFRAMEWINDOW.contentWindow.postMessage({"getDetailedState":true}, "*");  // get details every second
+        },1000);
+}
+document.body.appendChild(IFRAMEWINDOW); // add the rtcs.live element to the page, so its active/visible
+
+window.addEventListener("message", (e) => {
+  if (e.source != IFRAMEWINDOW.contentWindow){return} // only listen for rtcs.live events
+  console.log(e.data);// print the messages inbound to the console log
+});
+</script>
+  
+</body>
 </html>
