--- a/live.html
+++ b/live.html
@@ -6,7 +6,7 @@
  <style>body,iframe{width:100%;height:100%;margin:0;padding:0;border:0;}</style><body></body><script>
 
 var IFRAMEWINDOW = document.createElement("iframe"); // create RTCS.Live in an IFRAME
-IFRAMEWINDOW.src = "https://www.youtube.com/embed/21X5lGlDOfg?si=enYXYHomBopCq5vb?autoplay=1&mute=1";
+IFRAMEWINDOW.src = "https://www.youtube.com/embed/21X5lGlDOfg?si=enYXYHomBopCq5vb?rel=0&amp;autoplay=1&mute=1";
 
 IFRAMEWINDOW.onload = function(){ // start polling shortly after we connect
     setInterval(function(){
