--- a/live.html
+++ b/live.html
@@ -3,23 +3,33 @@
   
 </head>
 <body oncontextmenu="return false;">
- <style>body,iframe{width:100%;height:100%;margin:0;padding:0;border:0;}</style><body></body><script>
+ <style>body,iframe{width:100%;height:100%;margin:0;padding:0;border:0;}</style>
 
-var IFRAMEWINDOW = document.createElement("iframe"); // create RTCS.Live in an IFRAME
-IFRAMEWINDOW.src = "https://www.youtube.com/embed/21X5lGlDOfg?si=enYXYHomBopCq5vb?rel=0&amp;autoplay=1&mute=1";
-
-IFRAMEWINDOW.onload = function(){ // start polling shortly after we connect
-    setInterval(function(){
-            IFRAMEWINDOW.contentWindow.postMessage({"getDetailedState":true}, "*");  // get details every second
-        },1000);
-}
-document.body.appendChild(IFRAMEWINDOW); // add the rtcs.live element to the page, so its active/visible
-
-window.addEventListener("message", (e) => {
-  if (e.source != IFRAMEWINDOW.contentWindow){return} // only listen for rtcs.live events
-  console.log(e.data);// print the messages inbound to the console log
-});
-</script>
+<iframe id="ytVid" src="//www.youtube.com/embed/21X5lGlDOfg?rel=0&amp;enablejsapi=1&amp;showinfo=0"></iframe>
+ <script>
+   document.addEventListener('DOMContentLoaded', () => {
   
+    var iframeApi = document.createElement('script'),
+      firstScriptTag = document.getElementsByTagName('script')[0],
+      player;
+
+  // debugger;
+
+  iframeApi.src = 'https://www.youtube.com/iframe_api';
+  firstScriptTag.parentNode.insertBefore(iframeApi, firstScriptTag);
+
+  window.onYouTubeIframeAPIReady = function() {
+    player = new YT.Player('ytVid', {
+        events: {
+          'onReady': function(event) {
+            event.target.mute();
+            event.target.playVideo();
+          }
+        }
+    });
+  }
+  
+});
+ </script> 
 </body>
 </html>
