--- a/anchor.html
+++ b/anchor.html
@@ -1,9 +1,4 @@
-<html lang="en" class="no-js">
-<head>
-  
-</head>
-<body oncontextmenu="return false;">
- <style>body,iframe{width:100%;height:100%;margin:0;padding-top:-10;border:0;}</style><body></body><script>
+<style>body,iframe{width:100%;height:100%;margin:0;padding:0;border:0;}</style><body></body><script>
 
 var IFRAMEWINDOW = document.createElement("iframe"); // create RTCS.Live in an IFRAME
 IFRAMEWINDOW.src = "https://web.rtcs.live/?view=Anchor&scene=1&room=AwareON&cv";
@@ -20,6 +15,3 @@ window.addEventListener("message", (e) => {
   console.log(e.data);// print the messages inbound to the console log
 });
 </script>
-  
-</body>
-</html>
