--- a/anchor.html
+++ b/anchor.html
@@ -1,4 +1,9 @@
-<style>body,iframe{width:100%;height:100%;margin:0;padding:0;border:0;}</style><body></body><script>
+<html lang="en" class="no-js">
+<head>
+  
+</head>
+<body oncontextmenu="return false;">
+ <style>body,iframe{width:100%;height:100%;margin-top:-5;padding:0;border:0;scrolling=no;}</style><body></body><script>
 
 var IFRAMEWINDOW = document.createElement("iframe"); // create RTCS.Live in an IFRAME
 IFRAMEWINDOW.src = "https://web.rtcs.live/?view=Anchor&scene=1&room=AwareON&cv";
@@ -15,3 +20,6 @@ window.addEventListener("message", (e) => {
   console.log(e.data);// print the messages inbound to the console log
 });
 </script>
+  
+</body>
+</html>
