--- a/anchor.html
+++ b/anchor.html
@@ -1,25 +1,45 @@
 <html lang="en" class="no-js">
+
 <head>
-  
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <style>
+    html body {
+      width: 100%;
+      height: 100%;
+      padding: 0px;
+      margin: 0px;
+      overflow: hidden;
+      color: transparent;
+      background-color: transparent;
+    }
+    
+    #preview-frame {
+      width: 101%;
+      background-color: transparent;
+    }
+  </style>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script>
+    var calcHeight = function() {
+      $('#preview-frame').height($(window).height());
+    }
+
+    $(document).ready(function() {
+      calcHeight();
+    });
+
+    $(window).resize(function() {
+      calcHeight();
+    }).load(function() {
+      calcHeight();
+    });
+  </script>
 </head>
-<body oncontextmenu="return false;">
- <style>body,iframe{width:100%;height:100%;margin-top:-5;padding:0;border:0;scrolling=no;}</style><body></body><script>
 
-var IFRAMEWINDOW = document.createElement("iframe"); // create RTCS.Live in an IFRAME
-IFRAMEWINDOW.src = "https://web.rtcs.live/?view=Anchor&scene=1&room=AwareON&cv";
-
-IFRAMEWINDOW.onload = function(){ // start polling shortly after we connect
-    setInterval(function(){
-            IFRAMEWINDOW.contentWindow.postMessage({"getDetailedState":true}, "*");  // get details every second
-        },1000);
-}
-document.body.appendChild(IFRAMEWINDOW); // add the vdo.ninja element to the page, so its active/visible
-
-window.addEventListener("message", (e) => {
-  if (e.source != IFRAMEWINDOW.contentWindow){return} // only listen for vdo.ninja events
-  console.log(e.data);// print the messages inbound to the console log
-});
-</script>
-  
+<body>
+  <iframe id="preview-frame" src="https://web.rtcs.live/?view=Anchor&scene=1&room=AwareON&cv" name="preview-frame" frameborder="0" noresize="noresize" allow="autoplay;">
+  </iframe>
 </body>
+
 </html>
