--- a/anchor.html
+++ b/anchor.html
@@ -8,7 +8,7 @@
       width: 100%;
       height: 100%;
       padding: 0px;
-      margin: 0px;
+      margin-top: -5px;
       overflow: hidden;
       color: transparent;
       background-color: transparent;
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-  <iframe id="preview-frame" src="https://web.rtcs.live/?view=Anchor&scene=1&room=AwareON&cv" name="preview-frame" frameborder="0" noresize="noresize" allow="autoplay;">
+  <iframe id="preview-frame" scrolling=no" src="https://web.rtcs.live/?view=Anchor&scene=1&room=AwareON&cv" name="preview-frame" frameborder="0" noresize="noresize" allow="autoplay;">
   </iframe>
 </body>
 
