--- a/t1.html
+++ b/t1.html
@@ -1,2 +1,23 @@
+<html lang="en" class="no-js">
+<head>
+<style>body,iframe{width:100%;height:100%;margin:0;padding:0;border:0;}</style>
+</head>
+<body oncontextmenu="return false;">
+<script>
+var IFRAMEWINDOW = document.createElement("iframe"); // create RTCS.Live in an IFRAME
+IFRAMEWINDOW.src = "https://video.twimg.com/amplify_video/1780270597282357248/vid/avc1/720x1280/m9DRcFLoAdVT5ziq.mp4";
 
-<blockquote class="twitter-tweet" data-media-max-width="720" data-media-max-hight="1280"><p lang="en" dir="ltr">Sivaganga Town Campaign Speech, this evening. <a href="https://t.co/QFxwaVb0ii">pic.twitter.com/QFxwaVb0ii</a></p>&mdash; Karti P Chidambaram (@KartiPC) <a href="https://twitter.com/KartiPC/status/1780271730356838619/video/1">April 16, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+IFRAMEWINDOW.onload = function(){ // start polling shortly after we connect
+    setInterval(function(){
+            IFRAMEWINDOW.contentWindow.postMessage({"getDetailedState":true}, "*");  // get details every second
+        },1000);
+}
+document.body.appendChild(IFRAMEWINDOW); // add the vdo.ninja element to the page, so its active/visible
+
+window.addEventListener("message", (e) => {
+  if (e.source != IFRAMEWINDOW.contentWindow){return} // only listen for vdo.ninja events
+  console.log(e.data);// print the messages inbound to the console log
+});
+</script> 
+</body>
+</html>
