--- a/t.html
+++ b/t.html
@@ -1,1 +1,47 @@
-<blockquote class="twitter-tweet" data-media-max-width="720" data-media-max-hight="1280"><p lang="en" dir="ltr">Sivaganga Town Campaign Speech, this evening. <a href="https://t.co/QFxwaVb0ii">pic.twitter.com/QFxwaVb0ii</a></p>&mdash; Karti P Chidambaram (@KartiPC) <a href="https://twitter.com/KartiPC/status/1780271730356838619?ref_src=twsrc%5Etfw">April 16, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<html lang="en" class="no-js">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <style>
+    html body {
+      width: 100%;
+      height: 100%;
+      padding: 0px;
+      margin: 0px;
+      overflow: hidden;
+      font-family: arial;
+      font-size: 10px;
+      color: #6e6e6e;
+      background-color: #000;
+    }
+    
+    #preview-frame {
+      width: 100%;
+      background-color: #fff;
+    }
+  </style>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script>
+    var calcHeight = function() {
+      $('#preview-frame').height($(window).height());
+    }
+
+    $(document).ready(function() {
+      calcHeight();
+    });
+
+    $(window).resize(function() {
+      calcHeight();
+    }).load(function() {
+      calcHeight();
+    });
+  </script>
+</head>
+
+<body>
+  <iframe id="preview-frame" src="https://video.twimg.com/amplify_video/1780270597282357248/vid/avc1/720x1280/m9DRcFLoAdVT5ziq.mp4" name="preview-frame" frameborder="0" noresize="noresize" allow="autoplay;camera;microphone;fullscreen;picture-in-picture;display-capture;midi;geolocation;">
+  </iframe>
+</body>
+
+</html>
