--- a/newsreport.html
+++ b/newsreport.html
@@ -40,7 +40,7 @@
 </head>
 
 <body oncontextmenu="return false;">
-  <iframe id="preview-frame" src="https://web.rtcs.live/?scene=0&layout&remote&room=AwareON" name="preview-frame" frameborder="0" noresize="noresize">
+  <iframe id="preview-frame" src="https://web.rtcs.live/?scene=0&layout&remote&room=AwareON&cv&transparent" name="preview-frame" frameborder="0" noresize="noresize">
   </iframe>
   
 </body>
