--- a/stream3.html
+++ b/stream3.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-  <iframe id="preview-frame" src="https://web.rtcs.live/?scene&room=AwareON&transparency&cv&cover&11&slots=2" name="preview-frame" frameborder="0" noresize="noresize" allow="autoplay;camera;microphone;fullscreen;picture-in-picture;display-capture;midi;geolocation;">
+  <iframe id="preview-frame" src="https://web.rtcs.live/?scene&room=AwareON&transparency&cv&cover&11&slots=2&ex=Anchor" name="preview-frame" frameborder="0" noresize="noresize" allow="autoplay;camera;microphone;fullscreen;picture-in-picture;display-capture;midi;geolocation;">
   </iframe>
 </body>
 
