--- a/live.html
+++ b/live.html
@@ -1,11 +1,11 @@
-<html lang="en" class="no-js">
+<html lang="en">
 <head>
   
 </head>
 <body oncontextmenu="return false;">
  <style>body,iframe{width:100%;height:100%;margin:0;padding:0;border:0;}</style>
 
-<iframe id="ytVid" src="//www.youtube.com/embed/21X5lGlDOfg?rel=0&amp;enablejsapi=1&amp;showinfo=0"></iframe>
+<iframe id="ytVid" src="https://www.youtube.com/embed/O9mYwRlucZY?rel=0&amp;enablejsapi=1&amp;showinfo=0"></iframe>
  <script>
    document.addEventListener('DOMContentLoaded', () => {
   
