--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
 <body oncontextmenu="return false;">
  <style>body,iframe{width:100%;height:100%;margin:0;padding:0;border:0;}</style>
 
-<iframe id="ytVid" src="//www.youtube.com/embed/J86c3xNbHDY?rel=0&amp;enablejsapi=1&amp;showinfo=0"></iframe>
+<iframe id="ytVid" src="https://www.youtube.com/embed/J86c3xNbHDY?rel=0&amp;enablejsapi=1&amp;showinfo=0"></iframe>
  <script>
    document.addEventListener('DOMContentLoaded', () => {
   
