--- a/t.html
+++ b/t.html
@@ -42,6 +42,10 @@
 <body>
   <iframe id="preview-frame" src="https://video.twimg.com/amplify_video/1780270597282357248/vid/avc1/720x1280/m9DRcFLoAdVT5ziq.mp4" name="preview-frame" frameborder="0" noresize="noresize" allow="autoplay;camera;microphone;fullscreen;picture-in-picture;display-capture;midi;geolocation;">
   </iframe>
+  <script type="text/javascript">
+    myVid=document.getElementById("preview-frame");
+    myVid.muted=true;
+</script>
 </body>
 
 </html>
