--- a/t.html
+++ b/t.html
@@ -1,51 +1,11 @@
-<html lang="en" class="no-js">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <style>
-    html body {
-      width: 100%;
-      height: 100%;
-      padding: 0px;
-      margin: 0px;
-      overflow: hidden;
-      font-family: arial;
-      font-size: 10px;
-      color: #6e6e6e;
-      background-color: #000;
-    }
-    
-    #preview-frame {
-      width: 100%;
-      background-color: #fff;
-    }
-  </style>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script>
-    var calcHeight = function() {
-      $('#preview-frame').height($(window).height());
-    }
-
-    $(document).ready(function() {
-      calcHeight();
-    });
-
-    $(window).resize(function() {
-      calcHeight();
-    }).load(function() {
-      calcHeight();
-    });
-  </script>
-</head>
-
+<html>
 <body>
-  <iframe id="preview-frame" src="https://video.twimg.com/amplify_video/1780270597282357248/vid/avc1/720x1280/m9DRcFLoAdVT5ziq.mp4" name="preview-frame" frameborder="0" noresize="noresize" allow="autoplay;camera;microphone;fullscreen;picture-in-picture;display-capture;midi;geolocation;">
-  </iframe>
-  <script type="text/javascript">
-    myVid=document.getElementById("preview-frame");
-    myVid.muted=true;
-</script>
-</body>
 
+<video width="100%" height="100%" autoplay controls muted>
+  <source src="https://video.twimg.com/amplify_video/1780270597282357248/vid/avc1/720x1280/m9DRcFLoAdVT5ziq.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
+</body>
 </html>
+
