--- a/t.html
+++ b/t.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<video width="100%" height="100%" autoplay controls muted>
+<video width="100%" height="100%" autoplay loop muted>
   <source src="https://video.twimg.com/ext_tw_video/1859715989551665152/pu/vid/avc1/720x1280/MGxr63nfVBXZy7qg.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
