--- a/n.html
+++ b/n.html
@@ -5,7 +5,7 @@
 <body oncontextmenu="return false;">
  <style>body,iframe{width:100%;height:100%;margin:0;padding:0;border:0;}</style>
 
-<iframe id="ytVid" src="https://www.youtube.com/embed/iY7PWxMPgKI?si=bUsBkt3s6nH0p-Og?rel=0&amp;enablejsapi=1&amp;showinfo=0&modestbranding=1"></iframe>
+<iframe id="ytVid" src="https://www.youtube.com/embed/iY7PWxMPgKI?si=bUsBkt3s6nH0p-Og?rel=0&amp;enablejsapi=1&amp;showinfo=0"></iframe>
  <script>
    document.addEventListener('DOMContentLoaded', () => {
   
