--- a/gd.html
+++ b/gd.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<iframe src="https://drive.google.com/file/d/1niAd5qaHy2HDnEJKwnQUSIbxtiEDHoA8/preview?autoplay=1" width="1280" height="720" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1niAd5qaHy2HDnEJKwnQUSIbxtiEDHoA8/preview" width="1280" height="720" allow="autoplay"></iframe>
 </body>
 </html>
